# Darp.Luau.Native

./: .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Darp.Luau.Native.slnx  Directory.Build.props  Directory.Build.targets  README.md
.github/workflows/: ci.yml  release-please.yml
bindgen/: Cargo.toml  build.rs  generate_bindings.ps1
bindgen/src/: generated.rs  lib.rs
native/: CMakeLists.txt  LUAU_PIN.md
native/include/: luau_api.h  luau_config.h
scripts/: build-native.ps1
src/Darp.Luau.Native/: Darp.Luau.Native.csproj  LuauConstants.cs  LuauNative.g.cs  LuauNativeMacros.cs  LuauNativeMethods.cs  packages.lock.json
tests/Darp.Luau.Native.IntegrationTests/: Darp.Luau.Native.IntegrationTests.csproj  LuaTests.cs  Program.cs  RequireTests.cs
